# QmtPlatform

./: .env.example  .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml  runtime_config_support.py  strategy_loader.py  strategy_registry.py  strategy_runtime.py
.github/workflows/: ci.yml
application/: dry_run_service.py  qmt_client.py
data/fixtures/: market_history.sample.csv
data/fixtures/dividend_quality/: cn_dividend_quality_snapshot_factor_snapshot_latest.csv  cn_dividend_quality_snapshot_factor_snapshot_latest.csv.manifest.json  cn_dividend_quality_snapshot_ranking_latest.csv  release_status_summary.json
scripts/: build_fixtures.py  smoke_cn_dividend_quality_dry_run_e2e.py  smoke_cn_industry_etf_rotation_aggressive_dry_run_e2e.py  smoke_cn_industry_etf_rotation_dry_run_e2e.py
tests/: conftest.py  test_dividend_quality_dry_run.py  test_dry_run_cycle.py  test_main.py
