[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qmt-platform"
version = "0.1.0"
description = "QuantStrategyLab platform layer for A-share strategies via miniQMT (dry-run first)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuantStrategyLab" }]
dependencies = [
  "flask>=3.0",
  "pandas>=2.0",
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@bc5351d3567b2bb60416dc969062c37eedbbf65e",
  "cn-equity-strategies @ git+https://github.com/QuantStrategyLab/CnEquityStrategies.git@b16336a325a9e7f98ed2528e9a4575c3762c749c",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
py-modules = [
  "main",
  "runtime_config_support",
  "strategy_loader",
  "strategy_registry",
  "strategy_runtime",
]

[tool.setuptools.packages.find]
include = ["application*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
